# isosdk

./: README.md  _config.yml  changelog.txt
jnisample/JNISample/jni/: CMakeLists.txt  IsoSDKJNI.cpp  IsoSDKJNI.h  build_jni_linux.bash  build_jni_win.bat
windows/Samples/: CMakeLists.txt
windows/Samples/CPP/: CMakeLists.txt
windows/Samples/CPP/AudioFOXLib/: AudioFOXLib.cpp  AudioFOXLib.rc  AudioFOXLib.rc2  AudioFOXLibDlg.cpp  AudioFOXLibDlg.h  AudioFOXLib_2019.vcxproj  CDTextDlg.cpp  CDTextDlg.h  CDTimeRule.cpp  CDTimeRule.h  CMakeLists.txt  TrackList.cpp  TrackList.h  makeicons.bat  resource.h  resources.cpp  resources.h  stdafx.cpp  stdafx.h
windows/Samples/CPP/AudioMFC/: AcqDlg.cpp  AcqDlg.h  AudioMFC.cpp  AudioMFC.h  AudioMFC.rc  AudioMFCDlg.cpp  AudioMFCDlg.h  AudioMFC_2019.vcxproj  CDTextDlg.cpp  CDTextDlg.h  CMakeLists.txt  StdAfx.cpp  StdAfx.h  TrackList.cpp  TrackList.h  resource.h
windows/Samples/CPP/Common/: AboutDlg.cpp  AboutDlg.h  AboutDlgMFC.h  CMakeLists.txt  CommonFoxLib.h  FileTree.cpp  FileTree.h  FileTreeFoxLib.cpp  FileTreeFoxLib.h  FolderPickerDialog.cpp  FolderPickerDialog.h  KCreateFolderDlg.cpp  KCreateFolderDlg.h  KString.cpp  KString.h  LegacyFolderPickerDialog.cpp  LegacyFolderPickerDialog.h  MaskAndMode.h  Rule.cpp  Rule.h  SampleBurnDlg.cpp  SampleBurnDlg.h  SampleBurnDlgMFC.cpp  SampleBurnDlgMFC.h  Sector2Text.cpp  Sector2Text.h  SizeRange.cpp  SizeRange.h  VistaFolderPickerDialog.cpp  VistaFolderPickerDialog.h  config.h  config.h.in
windows/Samples/CPP/ConsoleBurner/: CMakeLists.txt  ConsoleBurner.cpp  ConsoleBurner_2019.vcxproj  stdafx.cpp  stdafx.h  synclib.h
windows/Samples/CPP/DataFOXLib/: BootImageDlg.cpp  BootImageDlg.h  CMakeLists.txt  DataFOXLib.cpp  DataFOXLib.rc  DataFOXLib.rc2  DataFOXLibDlg.cpp  DataFOXLibDlg.h  DataFOXLib_2019.vcxproj  DateTime.h  HeaderDlg.cpp  HeaderDlg.h  PropertiesDlg.cpp  PropertiesDlg.h  SessionDlg.cpp  SessionDlg.h  resource.h  resources.cpp  resources.h  stdafx.h
windows/Samples/CPP/DataMFC/: BootOptions.cpp  BootOptions.h  CMakeLists.txt  DataMFC.cpp  DataMFC.h  DataMFC.rc  DataMFCDlg.cpp  DataMFCDlg.h  DataMFC_2019.vcxproj  ExtInfos.cpp  ExtInfos.h  MultiSession.cpp  MultiSession.h  PropertiesDlg.cpp  PropertiesDlg.h  StdAfx.cpp  StdAfx.h  resource.h
windows/Samples/CPP/ImageEditFOXLib/: AudioGrabbingDialog.cpp  AudioGrabbingDialog.h  AudioTrackPlayingDialog.cpp  AudioTrackPlayingDialog.h  CMakeLists.txt  ImageEditFOXLib.cpp  ImageEditFOXLib.rc  ImageEditFOXLib.rc2  ImageEditFOXLibDlg.cpp  ImageEditFOXLibDlg.h  ImageEditFOXLib_2019.vcxproj  Logging.h  PropertiesDlg.cpp  PropertiesDlg.h  ReadCDTextDlg.cpp  ReadCDTextDlg.h  SaveContentDialog.cpp  SaveContentDialog.h  SaveDiscDialog.cpp  SaveDiscDialog.h  SaveTrackDialog.cpp  SaveTrackDialog.h  ScanSectorsDialog.cpp  ScanSectorsDialog.h  SectorViewDialog.cpp  SectorViewDialog.h  TreeNodes.cpp  TreeNodes.h  makeicons.bat  md5Dialog.cpp  md5Dialog.h  resource.h  resources.cpp  resources.h  stdafx.h
windows/Samples/CPP/ImageEditMFC/: AudioGrabbingDialog.cpp  AudioGrabbingDialog.h  AudioTrackPlayingDialog.cpp  AudioTrackPlayingDialog.h  CDTextReadDlg.cpp  CDTextReadDlg.h  CMakeLists.txt  ErrorListLogCreator.cpp  ErrorListLogCreator.h  FilePropertiesDlg.cpp  FilePropertiesDlg.h  ImageEditMFC.cpp  ImageEditMFC.h  ImageEditMFC.rc  ImageEditMFCDlg.cpp  ImageEditMFCDlg.h  ImageEditMFC_2019.vcxproj  KLock.h  Logging.h  Md5Dialog.cpp  Md5Dialog.h  PasswordDlg.cpp  PasswordDlg.h  PropertiesDlg.cpp  PropertiesDlg.h  ReadMe.txt  SaveContentDialog.cpp  SaveContentDialog.h  SaveDiscDialog.cpp  SaveDiscDialog.h  SaveTrackDialog.cpp  SaveTrackDialog.h  ScanSectorsDialog.cpp  ScanSectorsDialog.h  SectorViewDialog.cpp  SectorViewDialog.h  TreeNodes.cpp  TreeNodes.h  resource.h  stdafx.cpp  (+1 more)
windows/Samples/CPP/RawFOXLib/: CMakeLists.txt  RawFOXLib.cpp  RawFOXLib.rc  RawFOXLib.rc2  RawFOXLibDlg.cpp  RawFOXLibDlg.h  RawFOXLib_2019.vcxproj  makeicons.bat  resource.h  resources.cpp  resources.h  stdafx.h
windows/Samples/CPP/RawMFC/: CMakeLists.txt  RawMFC.cpp  RawMFC.h  RawMFC.rc  RawMFCDlg.cpp  RawMFCDlg.h  RawMFC_2019.vcxproj  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h
windows/Samples/CPP/UtilitiesFOXLib/: CMakeLists.txt  RegionChangeDlg.cpp  RegionChangeDlg.h  UtilitiesFOXLib.cpp  UtilitiesFOXLib.rc  UtilitiesFOXLib.rc2  UtilitiesFOXLibDlg.cpp  UtilitiesFOXLibDlg.h  UtilitiesFOXLib_2019.vcxproj  makeicons.bat  resource.h  resources.cpp  resources.h  stdafx.cpp  stdafx.h
windows/Samples/CPP/UtilitiesMFC/: CMakeLists.txt  ChangeRegionDlg.cpp  ChangeRegionDlg.h  DeviceInfoDlg.cpp  DeviceInfoDlg.h  DeviceInfoEx.cpp  DeviceInfoEx.h  DiscCopyDlg.cpp  DiscCopyDlg.h  GetCapa.cpp  GetCapa.h  ImageCreationDlg.cpp  ImageCreationDlg.h  MediumInfo.cpp  MediumInfo.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  UtilitiesMFC.cpp  UtilitiesMFC.h  UtilitiesMFC.rc  UtilitiesMFCDlg.cpp  UtilitiesMFCDlg.h  UtilitiesMFC_2019.vcxproj  resource.h
windows/Samples/CPP/VideoFOXLib/: CMakeLists.txt  VideoFOXLib.cpp  VideoFOXLib.rc  VideoFOXLib.rc2  VideoFOXLibDlg.cpp  VideoFOXLibDlg.h  VideoFOXLib_2019.vcxproj  VideoscanDlg.cpp  VideoscanDlg.h  makeicons.bat  resource.h  resources.cpp  resources.h  stdafx.h
windows/Samples/CPP/VideoMFC/: CMakeLists.txt  ScanDlg.cpp  ScanDlg.h  StdAfx.cpp  StdAfx.h  VideoMFC.cpp  VideoMFC.h  VideoMFC.rc  VideoMFCDlg.cpp  VideoMFCDlg.h  VideoMFC_2019.vcxproj  resource.h
windows/Samples/CSharp/: CMakeLists.txt
windows/Samples/CSharp/CSharpAudioSample/: AudioSampleForm.Designer.cs  AudioSampleForm.cs  CDTextDlg.Designer.cs  CDTextDlg.cs  CDTextDlg.resx  CMakeLists.txt  CSharpAudioSample_2019.csproj  CSharpAudioSample_2022.csproj  FileListView.cs  Program.cs  TrackListView.cs
windows/Samples/CSharp/CSharpDataSample/: BootImageDlg.Designer.cs  BootImageDlg.cs  CMakeLists.txt  CSharpDataSample_2019.csproj  CSharpDataSample_2022.csproj  DataSampleForm.Designer.cs  DataSampleForm.cs  DataSampleForm.resx  FileListView.cs  HeaderDlg.Designer.cs  HeaderDlg.cs  ImportSessionDlg.Designer.cs  ImportSessionDlg.cs  (+3 more)
windows/Samples/res/: CMakeLists.txt  isosdk.icns
(+7404 files in other folders)
