set(SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/KString.h
	${CMAKE_CURRENT_SOURCE_DIR}/MaskAndMode.h
	${CMAKE_CURRENT_SOURCE_DIR}/Sector2Text.h
	${CMAKE_CURRENT_SOURCE_DIR}/KString.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Sector2Text.cpp
	${CMAKE_CURRENT_BINARY_DIR}/config.h
)

set(SOURCE_FILES_MFC
	${CMAKE_CURRENT_SOURCE_DIR}/AboutDlgMFC.h
	${CMAKE_CURRENT_SOURCE_DIR}/FolderPickerDialog.h
	${CMAKE_CURRENT_SOURCE_DIR}/FileTree.h
	${CMAKE_CURRENT_SOURCE_DIR}/KCreateFolderDlg.h
	${CMAKE_CURRENT_SOURCE_DIR}/LegacyFolderPickerDialog.h
	${CMAKE_CURRENT_SOURCE_DIR}/SampleBurnDlgMFC.h
	${CMAKE_CURRENT_SOURCE_DIR}/SizeRange.h
	${CMAKE_CURRENT_SOURCE_DIR}/VistaFolderPickerDialog.h
	${CMAKE_CURRENT_SOURCE_DIR}/FolderPickerDialog.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/FileTree.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/KCreateFolderDlg.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/LegacyFolderPickerDialog.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SampleBurnDlgMFC.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SizeRange.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/VistaFolderPickerDialog.cpp
)

set(SOURCE_FILES_FOXLIB
	${CMAKE_CURRENT_SOURCE_DIR}/AboutDlg.h
	${CMAKE_CURRENT_SOURCE_DIR}/CommonFoxLib.h
	${CMAKE_CURRENT_SOURCE_DIR}/FileTreeFoxLib.h
	${CMAKE_CURRENT_SOURCE_DIR}/Rule.h
	${CMAKE_CURRENT_SOURCE_DIR}/SampleBurnDlg.h
	${CMAKE_CURRENT_SOURCE_DIR}/AboutDlg.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/FileTreeFoxLib.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Rule.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SampleBurnDlg.cpp
)

set(BUILD_FILES CMakeLists.txt)

add_subdirectory(winhdrs)

install(FILES ${SOURCE_FILES} ${BUILD_FILES} DESTINATION ${BASE_SAMPLES_DIR}/CPP/Common COMPONENT IsoSDK)
if(WIN32)
	install(FILES ${SOURCE_FILES_MFC} DESTINATION ${BASE_SAMPLES_DIR}/CPP/Common COMPONENT IsoSDK)
endif(WIN32)
install(FILES ${SOURCE_FILES_FOXLIB} DESTINATION ${BASE_SAMPLES_DIR}/CPP/Common COMPONENT IsoSDK_FOXToolkit)
