set(MD5_SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/e_os2.h
	${CMAKE_CURRENT_SOURCE_DIR}/KMD5Counter.h
	${CMAKE_CURRENT_SOURCE_DIR}/KMD5DataSource.h
	${CMAKE_CURRENT_SOURCE_DIR}/kmd5filesource.h
	${CMAKE_CURRENT_SOURCE_DIR}/md32_common.h
	${CMAKE_CURRENT_SOURCE_DIR}/md5.h
	${CMAKE_CURRENT_SOURCE_DIR}/md5_locl.h
	${CMAKE_CURRENT_SOURCE_DIR}/opensslconf.h
	${CMAKE_CURRENT_SOURCE_DIR}/opensslv.h
	${CMAKE_CURRENT_SOURCE_DIR}/KMD5Counter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/KMD5FileSource.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/md5_dgst.c
	${CMAKE_CURRENT_SOURCE_DIR}/md5_one.c
)

set(MD5_SOURCE_FILES ${MD5_SOURCE_FILES} PARENT_SCOPE)

install(FILES ${MD5_SOURCE_FILES} DESTINATION Samples/C++/ImageEditMFC/md5 COMPONENT IsoSDK)
